--- a/game/levels.html
+++ b/game/levels.html
@@ -81,7 +81,7 @@
                             <span class="level-difficulty">⭐ Fácil</span>
                             <span class="level-time">⏱️ 5-10 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(1)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(1)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="2">
@@ -93,7 +93,7 @@
                             <span class="level-difficulty">⭐ Fácil</span>
                             <span class="level-time">⏱️ 8-12 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(2)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(2)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="3">
@@ -105,7 +105,7 @@
                             <span class="level-difficulty">⭐⭐ Media</span>
                             <span class="level-time">⏱️ 10-15 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(3)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(3)">Jugar ahora</button>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                             <span class="level-difficulty">⭐⭐ Media</span>
                             <span class="level-time">⏱️ 12-15 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(4)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(4)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="5">
@@ -137,7 +137,7 @@
                             <span class="level-difficulty">⭐⭐ Media</span>
                             <span class="level-time">⏱️ 15-20 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(5)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(5)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="6">
@@ -149,7 +149,7 @@
                             <span class="level-difficulty">⭐⭐⭐ Difícil</span>
                             <span class="level-time">⏱️ 15-20 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(6)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(6)">Jugar ahora</button>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                             <span class="level-difficulty">⭐⭐⭐ Difícil</span>
                             <span class="level-time">⏱️ 20-25 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(7)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(7)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="8">
@@ -181,7 +181,7 @@
                             <span class="level-difficulty">⭐⭐⭐ Difícil</span>
                             <span class="level-time">⏱️ 20-30 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(8)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(8)">Jugar ahora</button>
                     </div>
 
                     <div class="level-card" data-level="9">
@@ -193,7 +193,7 @@
                             <span class="level-difficulty">⭐⭐⭐⭐ Experto</span>
                             <span class="level-time">⏱️ 30-40 min</span>
                         </div>
-                        <button class="btn btn-level" onclick="startLevel(9)">Jugar Ahora</button>
+                        <button class="btn btn-level" onclick="startLevel(9)">Jugar ahora</button>
                     </div>
                 </div>
             </div>
