juego logica intercambio8

--- a/logic-game/intercambio/index.html
+++ b/logic-game/intercambio/index.html
@@ -32,9 +32,6 @@
                         <option value="10">10 Personas</option>
                         <option value="15">15 Personas</option>
                         <option value="20">20 Personas</option>
-                        <option value="30">30 Personas</option>
-                        <option value="40">40 Personas</option>
-                        <option value="50">50 Personas</option>
                     </select>
                     <button id="new-game-btn" class="btn secondary">Nuevo Juego</button>
                 </div>
@@ -92,7 +89,7 @@
 
                 <div id="win-overlay" class="win-overlay hidden">
                     <div class="win-content">
-                        <h2>¡Intercambio Exitoso!</h2>
+                        <h2>¡Intercambio exitoso!</h2>
                         <p>Has alcanzado la meta de felicidad.</p>
                         <button id="next-level-btn" class="btn primary">Siguiente Nivel</button>
                     </div>
@@ -108,21 +105,21 @@
                         <li>
                             <span class="icon">🎁</span>
                             <div class="text">
-                                <strong>Asigna Regalos</strong>
+                                <strong>Asigna regalos</strong>
                                 <p>Arrastra de una persona a otra para asignar a quién le regala.</p>
                             </div>
                         </li>
                         <li>
                             <span class="icon">🔄</span>
                             <div class="text">
-                                <strong>Ciclo Perfecto</strong>
+                                <strong>Ciclo perfecto</strong>
                                 <p>Todos deben dar exactamente un regalo y recibir exactamente uno.</p>
                             </div>
                         </li>
                         <li>
                             <span class="icon">❤️</span>
                             <div class="text">
-                                <strong>Maximiza la Felicidad</strong>
+                                <strong>Maximiza la felicidad</strong>
                                 <p>Busca parejas con alta afinidad. Evita las conexiones rojas (bloqueadas).</p>
                             </div>
                         </li>
