juego logica intercambio8.1

--- a/logic-game/intercambio/index.html
+++ b/logic-game/intercambio/index.html
@@ -33,7 +33,7 @@
                         <option value="15">15 Personas</option>
                         <option value="20">20 Personas</option>
                     </select>
-                    <button id="new-game-btn" class="btn secondary">Nuevo Juego</button>
+                    <button id="new-game-btn" class="btn secondary">Nuevo juego</button>
                 </div>
 
                 <div class="control-group">
