juego logica intercambio8.2

--- a/logic-game/intercambio/index.html
+++ b/logic-game/intercambio/index.html
@@ -91,7 +91,10 @@
                     <div class="win-content">
                         <h2>¡Intercambio exitoso!</h2>
                         <p>Has alcanzado la meta de felicidad.</p>
-                        <button id="next-level-btn" class="btn primary">Siguiente Nivel</button>
+                        <div class="win-buttons">
+                            <button id="replay-btn" class="btn secondary">Jugar de nuevo</button>
+                            <button id="next-level-btn" class="btn primary">Siguiente nivel</button>
+                        </div>
                     </div>
                 </div>
             </div>
