juego logica intercambio8.7

--- a/logic-game/intercambio/index.html
+++ b/logic-game/intercambio/index.html
@@ -157,6 +157,9 @@
         </div>
     </footer>
 
+    <!-- Notification Container -->
+    <div id="notification-container"></div>
+
     <script src="script.js"></script>
 </body>
 
