--- a/proyectos/salva/salva-logistica.html
+++ b/proyectos/salva/salva-logistica.html
@@ -781,6 +781,14 @@
                     <div class="carousel-container">
                         <div class="carousel-track" id="contextCarouselTrack">
                             <div class="carousel-slide">
+                                <img src="img/inundado.png" alt="Simulación de inundaciones">
+                                <div class="carousel-caption">
+                                    <div class="carousel-caption-text">Vista simulada de zonas inundadas
+                                        humanitaria.</div>
+                                </div>
+                            </div>
+
+                            <div class="carousel-slide">
                                 <img src="img/1.png" alt="Visualización del sistema">
                                 <div class="carousel-caption">
                                     <div class="carousel-caption-text">Visualización general del sistema de logística
