--- a/proyectos/salva/salva-logistica.html
+++ b/proyectos/salva/salva-logistica.html
@@ -783,8 +783,8 @@
                             <div class="carousel-slide">
                                 <img src="img/inundado.png" alt="Simulación de inundaciones">
                                 <div class="carousel-caption">
-                                    <div class="carousel-caption-text">Vista simulada de zonas inundadas
-                                        humanitaria.</div>
+                                    <div class="carousel-caption-text">Vista simulada de zonas inundadas.
+                                    </div>
                                 </div>
                             </div>
 
