--- a/proyectos/salva/salva-logistica.html
+++ b/proyectos/salva/salva-logistica.html
@@ -737,7 +737,7 @@
                 <li><a href="#contexto">Contexto</a></li>
                 <li><a href="#enfoque">Marco metodológico</a></li>
                 <li><a href="#resultados">Resultados</a></li>
-                <li><a href="https://licensing-plane-newsletters-assembled.trycloudflare.com">Ingresar</a></li>
+                <li><a href="https://salva.jonasvelasco.xyz/">Ingresar</a></li>
                 
             </ul>
         </nav>
