--- a/recursos/docencia.html
+++ b/recursos/docencia.html
@@ -177,7 +177,7 @@
                     <!-- Placeholder para contenido futuro -->
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
                         <h3 class="text-lg font-semibold text-[#004D40] mb-3">Algoritmos Greedy</h3>
-                        <p class="text-gray-600 mb-4">Material de apoyo para las talleres.</p>
+                        <p class="text-gray-600 mb-4">Material de apoyo para talleres.</p>
                         <ul class="space-y-2 text-sm text-gray-600 mb-4 flex-grow">
                             <li>• Optimización y metaheurísticas</li>
                         </ul>
@@ -191,7 +191,7 @@
 
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
                         <h3 class="text-lg font-semibold text-[#004D40] mb-3">Algoritmos de búsqueda y optimización</h3>
-                        <p class="text-gray-600 mb-4">Material de apoyo para las talleres.</p>
+                        <p class="text-gray-600 mb-4">Material de apoyo para talleres.</p>
                         <ul class="space-y-2 text-sm text-gray-600 mb-4 flex-grow">
                             <li>• Optimización y metaheurísticas</li>
                         </ul>
@@ -200,7 +200,22 @@
                                 Acceder
                             </a>
                         </div>
-                    </div>                    
+                    </div>              
+                    
+
+                    <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
+                        <h3 class="text-lg font-semibold text-[#004D40] mb-3">Introducción al aprendizaje automático</h3>
+                        <p class="text-gray-600 mb-4">Material de apoyo para talleres.</p>
+                        <ul class="space-y-2 text-sm text-gray-600 mb-4 flex-grow">
+                            <li>• Fundamentos al ML</li>
+                        </ul>
+                        <div class="flex justify-end mt-4">
+                            <a href="../Intro_ML/index.html" class="inline-block bg-[#00796B] text-white px-4 py-2 rounded-lg hover:bg-[#004D40] transition-colors duration-300 text-sm">
+                                Acceder
+                            </a>
+                        </div>
+                    </div>  
+      
 
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
                         <h3 class="text-lg font-semibold text-[#004D40] mb-3">Notas</h3>
