--- a/Intro_ML/index.html
+++ b/Intro_ML/index.html
@@ -461,6 +461,31 @@
                 <span class="btn-explore">Explorar →</span>
             </div>
         </a>
+
+        <!-- Rule Learning (Disponible) -->
+        <a href="10-rule-learning/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">📐</div>
+                <div class="resource-category">Algoritmos</div>
+                <div class="resource-title">Constructor de reglas</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Diseña reglas para clasificar viviendas SF vs NY. 
+                    Aprende cómo funcionan los sistemas basados en reglas.
+                </p>
+                <ul class="resource-features">
+                    <li>492 puntos de datos reales</li>
+                    <li>Constructor visual de reglas</li>
+                    <li>Métricas en tiempo real</li>
+                    <li>Visualización de regiones</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
     </div>
 
     <footer class="footer">
