intro ML - otros materiales

--- a/Intro_ML/index.html
+++ b/Intro_ML/index.html
@@ -486,6 +486,306 @@
                 <span class="btn-explore">Explorar →</span>
             </div>
         </a>
+
+        <!-- Regresión Lineal Simple (Disponible) -->
+        <a href="11-regresion-simple/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">📈</div>
+                <div class="resource-category">Modelos lineales</div>
+                <div class="resource-title">Regresión lineal simple</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza el método de mínimos cuadrados. 
+                    Ajusta la recta manualmente o deja que el algoritmo encuentre el óptimo.
+                </p>
+                <ul class="resource-features">
+                    <li>Añadir puntos con clic</li>
+                    <li>Sliders para β₀ y β₁</li>
+                    <li>RSS y R² en tiempo real</li>
+                    <li>Animación hacia el óptimo</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Supuestos de Regresión (Disponible) -->
+        <a href="12-supuestos-regresion/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">🔍</div>
+                <div class="resource-category">Modelos lineales</div>
+                <div class="resource-title">Supuestos de regresión</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza los 4 supuestos del modelo de regresión lineal.
+                    Observa cómo lucen cuando se cumplen y cuando se violan.
+                </p>
+                <ul class="resource-features">
+                    <li>Histograma, QQ-plot, residuales</li>
+                    <li>5 escenarios predefinidos</li>
+                    <li>Slider de nivel de violación</li>
+                    <li>P-values simulados</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Regresión Múltiple 3D (Disponible) -->
+        <a href="13-regresion-multiple-3d/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">🧊</div>
+                <div class="resource-category">Modelos lineales</div>
+                <div class="resource-title">Regresión múltiple 3D</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza un plano de regresión ajustándose a datos con dos predictores.
+                    Rota el gráfico 3D para explorar desde diferentes ángulos.
+                </p>
+                <ul class="resource-features">
+                    <li>Gráfico 3D interactivo</li>
+                    <li>Sliders para β₀, β₁, β₂</li>
+                    <li>4 datasets de ejemplo</li>
+                    <li>Visualización de residuales</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Función Sigmoide y Frontera de Decisión (Disponible) -->
+        <a href="14-sigmoide-frontera/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">📐</div>
+                <div class="resource-category">Regresión logística</div>
+                <div class="resource-title">Sigmoide y frontera de decisión</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Explora la función sigmoide y cómo los pesos definen la frontera 
+                    de decisión en regresión logística.
+                </p>
+                <ul class="resource-features">
+                    <li>Gráfico interactivo de σ(z)</li>
+                    <li>Sliders para w₁, w₂ y bias</li>
+                    <li>Regiones coloreadas por probabilidad</li>
+                    <li>Hover para ver P(y=1|x)</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Entropía Cruzada (Disponible) -->
+        <a href="15-entropia-cruzada/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">📉</div>
+                <div class="resource-category">Regresión logística</div>
+                <div class="resource-title">Entropía cruzada</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza la función de pérdida de entropía cruzada y cómo penaliza 
+                    las predicciones incorrectas en clasificación.
+                </p>
+                <ul class="resource-features">
+                    <li>Comparación CE vs MSE</li>
+                    <li>Casos y=1 y y=0 lado a lado</li>
+                    <li>Animación de convergencia</li>
+                    <li>Hover interactivo en gráficos</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Descenso de Gradiente (Disponible) -->
+        <a href="16-descenso-gradiente/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">⛰️</div>
+                <div class="resource-category">Optimización</div>
+                <div class="resource-title">Descenso de gradiente</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza el algoritmo de descenso de gradiente optimizando 
+                    una función de pérdida en 3D.
+                </p>
+                <ul class="resource-features">
+                    <li>Superficie 3D interactiva</li>
+                    <li>4 tipos de superficies</li>
+                    <li>Slider de tasa de aprendizaje</li>
+                    <li>Gráfico de pérdida vs iteración</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Clasificador Logístico (Disponible) -->
+        <a href="17-clasificador-logistico/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">🎯</div>
+                <div class="resource-category">Regresión logística</div>
+                <div class="resource-title">Clasificador logístico</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Entrena un clasificador logístico en tiempo real y observa 
+                    cómo la frontera de decisión evoluciona.
+                </p>
+                <ul class="resource-features">
+                    <li>Añade puntos con clic</li>
+                    <li>Frontera de decisión en vivo</li>
+                    <li>Visualización de probabilidades</li>
+                    <li>Métricas: accuracy, loss, pesos</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- SVM Margen Máximo (Disponible) -->
+        <a href="18-svm-margen/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">📏</div>
+                <div class="resource-category">SVM</div>
+                <div class="resource-title">Margen máximo y vectores de soporte</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Visualiza cómo las SVM encuentran el hiperplano que maximiza 
+                    el margen entre las clases.
+                </p>
+                <ul class="resource-features">
+                    <li>Arrastra puntos interactivamente</li>
+                    <li>Modo manual vs óptimo</li>
+                    <li>Vectores de soporte resaltados</li>
+                    <li>Valor del margen M = 1/||β||</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- SVM Margen Suave (Disponible) -->
+        <a href="19-svm-soft-margin/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">⚖️</div>
+                <div class="resource-category">SVM</div>
+                <div class="resource-title">Margen suave y parámetro C</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Explora cómo el parámetro C controla el balance entre margen 
+                    y tolerancia a errores en datos no separables.
+                </p>
+                <ul class="resource-features">
+                    <li>Slider logarítmico para C</li>
+                    <li>Variables de holgura ξᵢ visualizadas</li>
+                    <li>Puntos coloreados por estado</li>
+                    <li>Conexión con regularización</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Comparación LR vs SVM (Disponible) -->
+        <a href="20-comparacion-lr-svm/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">⚔️</div>
+                <div class="resource-category">Comparación</div>
+                <div class="resource-title">Regresión logística vs SVM</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Compara lado a lado cómo dos clasificadores diferentes aprenden 
+                    del mismo dataset.
+                </p>
+                <ul class="resource-features">
+                    <li>Dos paneles sincronizados</li>
+                    <li>Probabilidades vs márgenes</li>
+                    <li>Matrices de confusión</li>
+                    <li>5 datasets de ejemplo</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Multicolinealidad y VIF (Disponible) -->
+        <a href="21-multicolinealidad-vif/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">🔗</div>
+                <div class="resource-category">Regresión</div>
+                <div class="resource-title">Multicolinealidad y VIF</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Explora cómo la correlación entre predictores afecta la estimación 
+                    de coeficientes en regresión múltiple.
+                </p>
+                <ul class="resource-features">
+                    <li>Matriz de correlación interactiva</li>
+                    <li>Cálculo de VIF en tiempo real</li>
+                    <li>Simulación de variabilidad</li>
+                    <li>4 escenarios predefinidos</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
+
+        <!-- Peligros de la Extrapolación (Disponible) -->
+        <a href="22-extrapolacion/index.html" class="resource-card available">
+            <div class="resource-header">
+                <div class="resource-icon">⚠️</div>
+                <div class="resource-category">Regresión</div>
+                <div class="resource-title">Peligros de la extrapolación</div>
+            </div>
+            <div class="resource-body">
+                <p class="resource-description">
+                    Descubre por qué predecir fuera del rango de los datos de 
+                    entrenamiento puede ser peligroso.
+                </p>
+                <ul class="resource-features">
+                    <li>Zonas de interpolación vs extrapolación</li>
+                    <li>Revelar función verdadera oculta</li>
+                    <li>4 escenarios: cuadrático, log, etc.</li>
+                    <li>Error que explota fuera del rango</li>
+                </ul>
+            </div>
+            <div class="resource-footer">
+                <span class="status-available">✓ Disponible</span>
+                <span class="btn-explore">Explorar →</span>
+            </div>
+        </a>
     </div>
 
     <footer class="footer">
